--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -4,7 +4,7 @@
 </app-alert>
 
 <!-- Registration Form -->
-<form [formGroup]="registerForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()" class="text-white">
     <!-- Name -->
     <div class="mb-3">
         <label class="inline-block mb-2">Name</label>
