--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,3 +1,6 @@
+<app-alert *ngIf="showAlert" [color]="alertColor">
+    {{ alertMsg }}
+</app-alert>
 <!-- Login Form -->
 <form #loginForm="ngForm" (ngSubmit)="login()">
     <!-- Email -->
@@ -15,15 +18,16 @@
         <!-- Password -->
         <div class="mb-3">
             <label class="inline-block mb-2">Password</label>
-            <input #password="ngModel" type="password"  name="password" [(ngModel)]="credentials.password" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
-            duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" placeholder="Password" required/>
+            <input #password="ngModel" type="password" name="password" [(ngModel)]="credentials.password" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+            duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" placeholder="Password"
+                required />
         </div>
         <p *ngIf="password.errors && password.touched && password.dirty" class="text-red-400">
             Password is invalid.
         </p>
     </div>
     <button type="submit" class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition
-            hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400" [disabled]="loginForm.invalid">
+            hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400" [disabled]="loginForm.invalid || inSubmission">
         Submit
     </button>
 </form>
