section 11 complete - form validation works

--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -28,7 +28,7 @@
     <!-- Confirm Password -->
     <div class="mb-3">
         <label class="inline-block mb-2">Confirm Password</label>
-        <app-input [control]="confirmPassword" type="password" placeholder="Confirm Password"></app-input>
+        <app-input [control]="confirm_password" type="password" placeholder="Confirm Password"></app-input>
     </div>
     <!-- Phone Number -->
     <div class="mb-3">
