--- a/src/app/clip/clip.component.html
+++ b/src/app/clip/clip.component.html
@@ -9,7 +9,7 @@
       </div>
 
       <!-- Video Editor -->
-      <div class="relative aspect-video">
+      <div class="relative aspect-video overflow-hidden">
         <!-- Video Player -->
         <video controls #videoPlayer crossorigin
           class="video-js vjs-theme-forest mx-auto">
