--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 
  <!-- Main Content -->
  <p class="container mx-auto mt-4 text-white">
-    This is a basic about page to demonstrate basic routing capabilities.
+    Personal Project done by Shirin Mozaffari - Sept 2022.
   </p>
